// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages base frontend + react 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "react-dom@latest",
    "react@latest",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@latest",
    "@babel/preset-env@latest",
    "@babel/preset-react@latest",
    "@lionbyte/eslint-config@latest",
    "@types/jest@latest",
    "@types/node@latest",
    "@types/react-dom@latest",
    "@types/react@latest",
    "@types/webpack-bundle-analyzer@latest",
    "@types/webpack-dev-server@latest",
    "@types/webpack-merge@latest",
    "@types/webpack@latest",
    "autoprefixer@9",
    "babel-jest@latest",
    "babel-loader@latest",
    "clean-webpack-plugin@3",
    "css-loader@3",
    "cssnano@4",
    "eslint@latest",
    "file-loader@6",
    "html-webpack-plugin@4",
    "jest-runner-eslint@latest",
    "jest@latest",
    "less-loader@6",
    "less@3",
    "mini-css-extract-plugin@latest",
    "postcss-loader@3",
    "prettier@2",
    "style-loader@1",
    "typescript@latest",
    "webpack-bundle-analyzer@3",
    "webpack-cli@3",
    "webpack-dev-server@3",
    "webpack-merge@5",
    "webpack@4",
  ],
}
`;

exports[`getPackages base frontend 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "regenerator-runtime@latest",
  ],
  "devDependencies": Array [
    "@babel/core@latest",
    "@babel/preset-env@latest",
    "@lionbyte/eslint-config@latest",
    "@types/jest@latest",
    "@types/node@latest",
    "@types/webpack-bundle-analyzer@latest",
    "@types/webpack-dev-server@latest",
    "@types/webpack-merge@latest",
    "@types/webpack@latest",
    "autoprefixer@9",
    "babel-jest@latest",
    "babel-loader@latest",
    "clean-webpack-plugin@3",
    "css-loader@3",
    "cssnano@4",
    "eslint@latest",
    "file-loader@6",
    "html-webpack-plugin@4",
    "jest-runner-eslint@latest",
    "jest@latest",
    "less-loader@6",
    "less@3",
    "mini-css-extract-plugin@latest",
    "postcss-loader@3",
    "prettier@2",
    "style-loader@1",
    "typescript@latest",
    "webpack-bundle-analyzer@3",
    "webpack-cli@3",
    "webpack-dev-server@3",
    "webpack-merge@5",
    "webpack@4",
  ],
}
`;

exports[`getPackages base node + git hooks 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@latest",
    "@types/node@latest",
    "eslint@latest",
    "husky@4",
    "jest-runner-eslint@latest",
    "jest@latest",
    "lint-staged@latest",
    "prettier@2",
    "typescript@latest",
  ],
}
`;

exports[`getPackages base node 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config@latest",
    "@types/jest@latest",
    "@types/node@latest",
    "eslint@latest",
    "jest-runner-eslint@latest",
    "jest@latest",
    "prettier@2",
    "typescript@latest",
  ],
}
`;
